# SV_paper

./: .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  requirements.txt  setup.py
Inferred_results/CMAES/: Noramp_10_cv_high_ru_alpha_disp  Noramp_1_cv_high_ru_alpha_disp  Noramp_2_cv_high_ru_alpha_disp  Noramp_3_cv_high_ru_alpha_disp  Noramp_4_cv_high_ru_alpha_disp  Noramp_5_cv_high_ru_alpha_disp  Noramp_6_cv_high_ru_alpha_disp  Noramp_7_cv_high_ru_alpha_disp  Noramp_8_cv_high_ru_alpha_disp  Noramp_9_cv_high_ru_alpha_disp  Ramped_3_cv_high_ru.ts
Inferred_results/MCMC/Synthetic/: 0.005.cm  0.005.lowkf
SV_paper.egg-info/: SOURCES.txt
experimental_data/Ramped/: Yellow_Electrode_Ramped_1_cv_current  Yellow_Electrode_Ramped_1_cv_voltage  Yellow_Electrode_Ramped_2_cv_current  Yellow_Electrode_Ramped_2_cv_voltage  Yellow_Electrode_Ramped_3_cv_current  Yellow_Electrode_Ramped_3_cv_voltage  Yellow_Electrode_Ramped_4_cv_current  Yellow_Electrode_Ramped_4_cv_voltage  Yellow_Electrode_Ramped_5_cv_current  Yellow_Electrode_Ramped_5_cv_voltage
figures/: README.md  figure1.py  figure2.py  figure3.py  figure4.py  figure5.py  figure6.py  figure6_omega.py  figure7.py  figureSX.py  toc_plot.py
simulation/: surface_process_brent.cpp
src/: README.md  SV_simulation_example.py  dispersion_class.py  single_e_class_unified.py
